--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "description": "",
   "devDependencies": {
     "cypress": "^13.14.2"
+  },
+  "dependencies": {
+    "neat-csv": "^7.0.0"
   }
 }
